[gd_scene load_steps=64 format=2]

[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_3.png" type="Texture" id=1]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_2.png" type="Texture" id=2]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_3.png" type="Texture" id=3]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_2.png" type="Texture" id=4]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_1.png" type="Texture" id=5]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_1.png" type="Texture" id=6]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_0.png" type="Texture" id=7]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_0.png" type="Texture" id=8]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_4.png" type="Texture" id=9]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_5.png" type="Texture" id=10]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_6.png" type="Texture" id=11]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_7.png" type="Texture" id=12]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Run/HeroKnight_Run_9.png" type="Texture" id=14]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_4.png" type="Texture" id=15]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_5.png" type="Texture" id=16]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_6.png" type="Texture" id=17]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Idle/HeroKnight_Idle_7.png" type="Texture" id=18]
[ext_resource path="res://scenes/Player.gd" type="Script" id=19]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Jump/HeroKnight_Jump_0.png" type="Texture" id=20]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Jump/HeroKnight_Jump_2.png" type="Texture" id=21]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Jump/HeroKnight_Jump_1.png" type="Texture" id=22]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Fall/HeroKnight_Fall_3.png" type="Texture" id=23]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Fall/HeroKnight_Fall_2.png" type="Texture" id=24]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Fall/HeroKnight_Fall_0.png" type="Texture" id=25]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Fall/HeroKnight_Fall_1.png" type="Texture" id=26]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_5.png" type="Texture" id=27]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_4.png" type="Texture" id=28]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_3.png" type="Texture" id=29]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_2.png" type="Texture" id=30]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_0.png" type="Texture" id=31]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack1/HeroKnight_Attack1_1.png" type="Texture" id=32]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Roll/HeroKnight_Roll_3.png" type="Texture" id=33]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Roll/HeroKnight_Roll_2.png" type="Texture" id=34]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Roll/HeroKnight_Roll_1.png" type="Texture" id=35]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Roll/HeroKnight_Roll_4.png" type="Texture" id=36]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Roll/HeroKnight_Roll_5.png" type="Texture" id=37]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Roll/HeroKnight_Roll_6.png" type="Texture" id=38]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Roll/HeroKnight_Roll_7.png" type="Texture" id=39]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Roll/HeroKnight_Roll_8.png" type="Texture" id=40]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Roll/HeroKnight_Roll_0.png" type="Texture" id=41]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack2/HeroKnight_Attack2_3.png" type="Texture" id=42]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack2/HeroKnight_Attack2_2.png" type="Texture" id=43]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack2/HeroKnight_Attack2_4.png" type="Texture" id=44]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack2/HeroKnight_Attack2_5.png" type="Texture" id=45]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack2/HeroKnight_Attack2_0.png" type="Texture" id=46]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack3/HeroKnight_Attack3_0.png" type="Texture" id=47]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack3/HeroKnight_Attack3_2.png" type="Texture" id=48]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack3/HeroKnight_Attack3_3.png" type="Texture" id=49]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack3/HeroKnight_Attack3_7.png" type="Texture" id=50]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack3/HeroKnight_Attack3_1.png" type="Texture" id=51]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack3/HeroKnight_Attack3_4.png" type="Texture" id=52]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack3/HeroKnight_Attack3_6.png" type="Texture" id=53]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack3/HeroKnight_Attack3_5.png" type="Texture" id=54]
[ext_resource path="res://assets/hero/Hero Knight/Sprites/HeroKnight/Attack2/HeroKnight_Attack2_1.png" type="Texture" id=55]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.4212, 20.3391 )

[sub_resource type="Animation" id=10]
resource_name = "dash"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 41 ), ExtResource( 35 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:collision_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "fall"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 23 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "first_attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 29 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Area2D/SwordHitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Area2D/SwordHitbox:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolVector2Array( -12.9653, -24.1103, 17.8766, -24.5672, 27.0149, -21.3688, 34.554, -17.485, 42.7785, -11.5451, 47.3477, -7.43282, 48.2615, 2.3909, 46.4339, 6.04623, 42.3216, 10.8439, 34.7825, 15.1846, 27.4718, 16.5553, 22.6742, 16.3269, 21.9888, 14.0423, 24.5019, 13.8138, 29.2995, 11.3008, 34.0971, 5.1324, 36.8386, -1.4929, 36.8386, -8.5751, 28.3856, -15.4289, 19.7042, -18.8557, 10.3374, -20.6834, 1.42755, -22.7395, -9.08154, -22.5111 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 20 ), ExtResource( 22 ), ExtResource( 21 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 14 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "second_attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 46 ), ExtResource( 55 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 44 ), ExtResource( 45 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Area2D/SwordHitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Area2D/SwordHitbox:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( 3.25522, -14.515, 21.5319, -12.6874, 29.9849, -8.80357, 35.2394, -4.91977, 38.4378, -1.4929, 36.1532, 1.24861, 31.8125, 3.9901, 27.7003, 5.1324, 28.3856, 6.50314, 37.2955, 6.50314, 46.4339, 2.61935, 47.3477, -0.122147, 48.0331, -5.14824, 40.7224, -10.8597, 31.8125, -13.3727, 26.558, -15.2004, 19.2473, -15.6573 ), PoolVector2Array( -35.8112, -0.807526, -32.3843, 3.76164, -27.5867, 7.8739, -18.9053, 10.3869, -12.5084, 11.5292, -3.59853, 12.6715, 3.25522, 12.2146, 14.6781, 11.9862, 22.2173, 9.93002, 25.4157, 9.01619, 22.2173, 11.7577, 15.592, 14.4992, 6.91055, 15.413, 1.65601, 15.413, -11.5946, 15.6415, -23.7029, 13.1284, -32.1558, 9.24464, -37.6388, 2.3909, -38.5527, -0.579056, -37.8673, -2.86365 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "third_attack"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 47 ), ExtResource( 51 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 52 ), ExtResource( 54 ), ExtResource( 53 ), ExtResource( 50 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Area2D/SwordHitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Area2D/SwordHitbox:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolVector2Array( -9.99537, -24.5672, 17.6481, -25.2526, 33.6402, -19.998, 45.0631, -12.4589, 50.0892, -6.06206, 50.7746, -1.03598, 50.7746, 9.70157, 48.7185, 14.0423, 43.9208, 19.7537, 40.2655, 20.2106, 42.3216, 10.6154, 43.2355, 1.24861, 39.5801, -6.74744, 32.9548, -14.2866, 20.3896, -19.5411, 10.5659, -21.3688 ) ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 41.974, 147.417 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 19 )
__meta__ = {
"_edit_group_": true
}
speed = 4
dash_speed = 8
gravity = 10
jump_power = -230

[node name="IdleHitbox" type="CollisionShape2D" parent="."]
position = Vector2( -2.7415, 5.82759 )
shape = SubResource( 2 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="ComboTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dash = SubResource( 10 )
anims/fall = SubResource( 6 )
anims/first_attack = SubResource( 3 )
anims/idle = SubResource( 9 )
anims/jump = SubResource( 7 )
anims/run = SubResource( 8 )
anims/second_attack = SubResource( 4 )
anims/third_attack = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="SwordHitbox" type="CollisionPolygon2D" parent="Sprite/Area2D"]
polygon = PoolVector2Array( -9.99537, -24.5672, 17.6481, -25.2526, 33.6402, -19.998, 45.0631, -12.4589, 50.0892, -6.06206, 50.7746, -1.03598, 50.7746, 9.70157, 48.7185, 14.0423, 43.9208, 19.7537, 40.2655, 20.2106, 42.3216, 10.6154, 43.2355, 1.24861, 39.5801, -6.74744, 32.9548, -14.2866, 20.3896, -19.5411, 10.5659, -21.3688 )
disabled = true
[connection signal="timeout" from="DashTimer" to="." method="stop_dash"]
[connection signal="timeout" from="AttackTimer" to="." method="stop_attack"]
[connection signal="timeout" from="ComboTimer" to="." method="reset_combo"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="area_entered" from="Sprite/Area2D" to="." method="on_sword_hit"]
